syntax = "proto3";

option go_package = "example.com/PROJECT_1/entity/proto";

package proto;

service EmployeeToSalary {
    rpc CreateSalary(CreateSalaryRequest)returns(CreateSalaryResponse){}
}

message CreateSalaryRequest{
    int32 employee_id =1;
    int32 salary_amount =2;
    string project =3;
    string joining_date=4;
}

message CreateSalaryResponse{
    bool status =1;
    string message=2;
}